--- a/config/i18n/en.json
+++ b/config/i18n/en.json
@@ -1,8 +1,8 @@
 {
   "viewIn": "View in English",
   "langPicker": "English",
-  "title": "Cool NFT Project",
-  "description": "This is the minting page for Cool NFT Project",
+  "title": "Hamster Village",
+  "description": "Hamster Village is a collection of 1111 unique Hamster who live in own village. The village is on NEAR Blockchain. Our main target is to build the friendliest and largest NEAR village. Create our Own the best interesting and addictive farm game play-to-earn.",
   "calendarEvent": "Go Mint an NFT!",
   "connectWallet": "Login with NEAR",
   "signOut": "Sign Out",
@@ -14,7 +14,7 @@
   "zoomIn": "Zoom In",
   "zoomOut": "Zoom Out",
   "hero": {
-    "video": "3d_toys_playground.mp4",
+    "image": "hero.gif",
     "title": "NFTs drop at SALE_START!",
     "body": "Tagline goes here.",
     "remaining": "REMAINING_COUNT / INITIAL_COUNT left",
@@ -23,7 +23,7 @@
     "saleClosed": {
       "ps": "Want early access? Sign in.",
       "signedIn": {
-        "ps": "Pre-mint start: PRESALE_START\n\nJoin the whitelist! [Join our Discord](https://discord.com/invite/UY9Xf2k) and request an invite."
+        "ps": "Pre-mint start: PRESALE_START\n\nJoin the whitelist! [Join our Discord](https://discord.gg/cehMwY7PkY) and request an invite."
       },
       "vip": {
         "title": "Welcome, CURRENT_USER!",
@@ -32,7 +32,7 @@
       }
     },
     "presale": {
-      "ps": "Pre-mint started!\n\nGet in on it! [Join our Discord](https://discord.com/invite/UY9Xf2k) and request an invite.",
+      "ps": "Pre-mint started!\n\nGet in on it! [Join our Discord](https://discord.gg/cehMwY7PkY) and request an invite.",
       "vip": {
         "title": "Pre-mint started!",
         "body": "Public minting starts at SALE_START",
@@ -63,8 +63,13 @@
   "extraSections": [
     {
       "className": "this-class-is-set-in-i18n-files",
-      "text": "# Introducing Cool NFT Project\n\nThis is a longer description of the project. About a paragraph long. Some [filler text](https://placehodler.shapelabs.co/) to demonstrate: Token standard surrendered some burned mnemonic phrase until some wallet because blockchain detected many pre-mine. It based on many automated token generation event, and when Tether formed some trustless in the FUD, Dogecoin slept on lots of anti-money laundering of many stale block!\n\nSolidity limited lots of reinvested distributed denial of service attack! ICO specialises in lots of lightning fast private chain since Zilliqa surrendered few reinvested cryptocurrency, however, because someone limited few provably fiat until the vanity address, Augur stuck many burned pre-mine. They sharded many technical analysis, or NFT specialises in the FOMO in few wash trade.",
-      "image": "example.png"
+      "text": "# Introducing Hamster Village\n\nHamster Village is a collection of 1111 unique Hamster who live in own village. The village is on NEAR Blockchain. Our main target is to build the friendliest and largest NEAR village. Create our Own the best interesting and addictive farm game play-to-earn.",
+      "image": "logo.png"
+    },
+    {
+      "className": "roadmap",
+      "text": "# Roadmap\n\n### ✅ Phase Generation \n * Launch Twitter & Discord\n * Launch Website\n * Member Whitelist\n\n ### ✅ Phase Evolution \n * Marketing & Collaborations\n * Mint & Listing\n * DAO Launch\n\n ### ✅ Phase Prime \n * Buy-Back of NFTs for Royalty\n * NFT Airdrop for Holders\n * Branded Clothing and Merch\n\n ### ✅ Phase Domination\n * Develop Play-to-Earn Metaverse Farm Game\n * Develop Custom Tokens for Game\n * Launch Token",
+      "image": "roadmap.png"
     }
   ]
 }
