--- a/config/i18n/en.json
+++ b/config/i18n/en.json
@@ -16,7 +16,7 @@
   "hero": {
     "image": "hero.gif",
     "title": "NFTs drop at SALE_START!",
-    "body": "Tagline goes here.",
+    "body": "..it takes a village!",
     "remaining": "REMAINING_COUNT / INITIAL_COUNT left",
     "cta": "Add to Calendar",
     "action": "ADD_TO_CALENDAR(SALE_START)",
@@ -63,7 +63,7 @@
   "extraSections": [
     {
       "className": "this-class-is-set-in-i18n-files",
-      "text": "# Introducing Hamster Village\n\nHamster Village is a collection of 1111 unique Hamster who live in own village. The village is on NEAR Blockchain. Our main target is to build the friendliest and largest NEAR village. Create our Own the best interesting and addictive farm game play-to-earn.",
+      "text": "# Hamster Village: Population 1,111\n\nHamster Village is a collection of 1111 unique Hamsters who live in a small village. The village itself is located on NEAR Blockchain. Our main goal is to build the friendliest and largest NEAR village in the metaverse and create  the best, interesting and addictive play-to-earn game out there. Welcome to Hamster Village!",
       "image": "logo.png"
     },
     {
