fix: social description typos

--- a/config/i18n/en.json
+++ b/config/i18n/en.json
@@ -2,7 +2,7 @@
   "viewIn": "View in English",
   "langPicker": "English",
   "title": "Hamster Village",
-  "description": "Hamster Village is a collection of 1111 unique Hamster who live in own village. The village is on NEAR Blockchain. Our main target is to build the friendliest and largest NEAR village. Create our Own the best interesting and addictive farm game play-to-earn.",
+  "description": "Hamster Village is a collection of 1111 unique Hamsters who live in a small village. The village itself is located on NEAR Blockchain. Our main goal is to build the friendliest and largest NEAR village in the metaverse and create  the best, interesting and addictive play-to-earn game out there. Welcome to Hamster Village!",
   "calendarEvent": "Go Mint an NFT!",
   "connectWallet": "Login with NEAR",
   "signOut": "Sign Out",
